Skeleton html and css

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,28 @@
     <title>Todo List</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="all-tasks">
+            <h2 class="task-list-title">My Lists</h2>
+            <ul id="list-container">
+                <li>Today</li>
+                <li>School</li>
+                <li>Todo</li>
+            </ul>
+        </div>
+        <div class="todo-list">
+            <div class="todo-header">
+                <h2>Today</h2>
+                <p>3 tasks remaining</p>
+            </div>
+            <div class="todo-items">
+                <ul>
+                    <li>Fix paddles</li>
+                    <li>Speedo contract</li>
+                    <li>US Visa Application</li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
