--- a/src/template.html
+++ b/src/template.html
@@ -10,20 +10,21 @@
         <div class="all-tasks">
             <div class="task-list-header">
                 <h2 class="task-list-title">My Lists</h2>
-                <form action="">
-                    <input id="new-list-input" type="text">
-                    <button id="new-list-btn">+</button>
-                </form>
             </div>
             <ul id="list-container">
                 <!-- <li>Today</li>
                 <li>School</li>
                 <li>Todo</li> -->
             </ul>
+            <form action="">
+                <input class="new-input" id="new-list-input" type="text"
+                placeholder="new list name">
+                <button class="btn" id="new-list-btn">+</button>
+            </form>
         </div>
         <div class="todo-list">
             <div class="todo-header">
-                <h2>Todos</h2>
+                <h2>Tasks</h2>
                 <p id="active-task-count">3 tasks remaining</p>
             </div>
             <div class="todo-items">
@@ -35,9 +36,11 @@
             </div>
             <div class="new-todo-creator">
                 <form action="">
-                    <input id="new-todo-input" type="text">
-                    <button id="new-todo-btn">+</button>
+                    <input class="new-input" id="new-todo-input" type="text"
+                    placeholder="new task name">
+                    <button class="btn" id="new-todo-btn">+</button>
                 </form>
+            </div>                
             </div>
             <!-- <div id="todo-details">
                 <form action="">
@@ -49,8 +52,14 @@
     </div>
     <template id="todo-template">
         <li>
-            <input type="checkbox" class="checkbox"/>
-            <label for=""></label>
+            <div class="todo-main">
+                <div class="todo-name">
+                    <input type="checkbox" class="checkbox"/>
+                    <label for=""></label>
+                </div>
+                <div class="priority">priority level</div>
+                <div class="due-date">task due date</div>
+            </div>
             <div class="expandable-wrapper">
                 <div class="todo-details">
                      <form action="">
