Add styling for todo details and delete todo btn

--- a/src/template.html
+++ b/src/template.html
@@ -66,18 +66,24 @@
             <div class="expandable-wrapper">
                 <div class="todo-details">
                      <form action="">
-                        <label for="">Notes</label>
-                        <textarea name="notes" id=""></textarea>
-                        <label for="">Priority</label>
-                        <select name="Priority" id="">
-                            <option value="" selected disabled hidden>Choose here</option>
-                            <option value="Urgent">Urgent</option>
-                            <option value="Important">Important</option>
-                            <option value="Low priority">Low priority</option>
-                            <option value="Done">Done</option>
-                        </select>
-                        <label for="">Due date</label>
-                        <input type="date" class="date">
+                        <div>
+                            <label for="">Notes</label>
+                            <textarea name="notes" id=""></textarea>
+                        </div>
+                        <div>
+                            <label for="">Priority</label>
+                            <select name="Priority" id="">
+                                <option value="" selected disabled hidden>Choose here</option>
+                                <option value="Urgent">Urgent</option>
+                                <option value="Important">Important</option>
+                                <option value="Low priority">Low priority</option>
+                                <option value="Done">Done</option>
+                            </select>
+                        </div>
+                        <div>
+                            <label for="">Due date</label>
+                            <input type="date" class="date">
+                        </div>
                      </form>
                 </div>
             </div>
